dnl This file is an input file used by autoconf to generate the configure file.
dnl 
# Author: Christopher Hylands
# Version: $Id$
#
# Copyright (c) 1996 The Regents of the University of California.
# All rights reserved.
# 
# Permission is hereby granted, without written agreement and without
# license or royalty fees, to use, copy, modify, and distribute this
# software and its documentation for any purpose, provided that the
# above copyright notice and the following two paragraphs appear in all
# copies of this software.
# 
# IN NO EVENT SHALL THE UNIVERSITY OF CALIFORNIA BE LIABLE TO ANY PARTY
# FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES
# ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF
# THE UNIVERSITY OF CALIFORNIA HAS BEEN ADVISED OF THE POSSIBILITY OF
# SUCH DAMAGE.
# 
# THE UNIVERSITY OF CALIFORNIA SPECIFICALLY DISCLAIMS ANY WARRANTIES,
# INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE SOFTWARE
# PROVIDED HEREUNDER IS ON AN "AS IS" BASIS, AND THE UNIVERSITY OF
# CALIFORNIA HAS NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES,
# ENHANCEMENTS, OR MODIFICATIONS.
# 
# 						PT_COPYRIGHT_VERSION_2
# 						COPYRIGHTENDKEY

dnl Process this file with autoconf to produce a configure script.
AC_INIT(eprintf/eprintf.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

_PTOLEMY=/users/ptdesign

#
# User specified location of the tcl include
#
AC_ARG_WITH(tcl, [  --with-tclinclude=DIR          use Tcl 7.6 binaries from DIR],
        TCL_INCLUDE_DIR=$withval, TCL_INCLUDE_DIR=`cd $_PTOLEMY/tcltk/itcl/include/itcl; pwd`)
if test ! -d $TCL_INCLUDE_DIR; then
    AC_MSG_ERROR(Tcl directory $TCL_INCLUDE_DIR doesn't exist)
fi

#
# User specified location of the tcl lib
#
AC_ARG_WITH(tcl, [  --with-tcllib=DIR          use Tcl 7.6 binaries from DIR],
        TCL_LIB_DIR=$withval, TCL_LIB_DIR=`cd $_PTOLEMY/tcltk/itcl.$PTARCH/lib/itcl; pwd`)
if test ! -d $TCL_LIB_DIR; then
    AC_MSG_ERROR(Tcl directory $TCL_LIB_DIR doesn't exist)
fi

file=$TCL_LIB_DIR/tclConfig.sh
. $file

CFLAGS=$TCL_CFLAGS
SHLIB_CFLAGS=$TCL_SHLIB_CFLAGS
SHLIB_LD=$TCL_SHLIB_LD
SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
SHLIB_VERSION=$TCL_SHLIB_VERSION
DL_LIBS=$TCL_DL_LIBS
LD_FLAGS=$TCL_LD_FLAGS
LD_SEARCH_FLAGS=$TCL_LD_SEARCH_FLAGS


#
# User specified location of the tk lib
#
AC_ARG_WITH(tcl, [  --with-tklib=DIR          use Tk 4.2 binaries from DIR],
        TK_LIB_DIR=$withval, TK_LIB_DIR=`cd $_PTOLEMY/tcltk/itcl.$PTARCH/lib/itcl; pwd`)
if test ! -d $TK_LIB_DIR; then
    AC_MSG_ERROR(Tk directory $TK_LIB_DIR doesn't exist)
fi

#
# User specified location of the tk include
#
AC_ARG_WITH(tcl, [  --with-tkinclude=DIR          use Tk 4.2 binaries from DIR],
        TK_INCLUDE_DIR=$withval, TK_INCLUDE_DIR=`cd $_PTOLEMY/tcltk/itcl/include/itcl; pwd`)
if test ! -d $TK_INCLUDE_DIR; then
    AC_MSG_ERROR(Tk directory $TK_INCLUDE_DIR doesn't exist)
fi

#
# User specified location of the Java Development Kit (JDK)
#
AC_ARG_WITH(tcl, [  --with-java=DIR          use Java binaries from DIR],
        JAVAHOME=$withval, JAVAHOME=`cd /opt/SUNWjws/JDK; pwd`)
if test ! -d $JAVAHOME; then
    AC_MSG_ERROR(Java directory $JAVAHOME doesn't exist)
fi
if test ! -f $JAVAHOME/include/StubPreamble.h; then
    AC_MSG_ERROR(There's no StubPreamble.h in $JAVAHOME/include;  use the --with-java= configure flag to specify the location of the Java Development Kit (JDK) )
fi

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl Substitute the following variables in the Makefile (in alphabetical order)
AC_SUBST(CFLAGS)
AC_SUBST(DL_LIBS)
AC_SUBST(JAVAHOME)
AC_SUBST(LD_FLAGS)
AC_SUBST(LD_SEARCH_FLAGS)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_LD)
AC_SUBST(SHLIB_LD_LIBS)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(SHLIB_VERSION)
AC_SUBST(TCL_INCLUDE_DIR)
AC_SUBST(TCL_LIB_DIR)
AC_SUBST(TK_INCLUDE_DIR)
AC_SUBST(TK_LIB_DIR)


AC_OUTPUT(tcljava/makefile makefile)
