dnl This file is an input file used by autoconf to generate the configure file.
dnl 
# Author: Christopher Hylands
# Version: $Id$
#
# Copyright (c) 1996 The Regents of the University of California.
# All rights reserved.
# 
# Permission is hereby granted, without written agreement and without
# license or royalty fees, to use, copy, modify, and distribute this
# software and its documentation for any purpose, provided that the
# above copyright notice and the following two paragraphs appear in all
# copies of this software.
# 
# IN NO EVENT SHALL THE UNIVERSITY OF CALIFORNIA BE LIABLE TO ANY PARTY
# FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES
# ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION, EVEN IF
# THE UNIVERSITY OF CALIFORNIA HAS BEEN ADVISED OF THE POSSIBILITY OF
# SUCH DAMAGE.
# 
# THE UNIVERSITY OF CALIFORNIA SPECIFICALLY DISCLAIMS ANY WARRANTIES,
# INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE SOFTWARE
# PROVIDED HEREUNDER IS ON AN "AS IS" BASIS, AND THE UNIVERSITY OF
# CALIFORNIA HAS NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES,
# ENHANCEMENTS, OR MODIFICATIONS.
# 
# 						PT_COPYRIGHT_VERSION_2
# 						COPYRIGHTENDKEY

dnl Process this file with autoconf to produce a configure script.
AC_INIT(tyjava/eprintf/_eprintf.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

#
# User specified location of the Ptolemy Tree
#
AC_ARG_WITH(tcl, [  --with-ptolemy=DIR          use Tcl/Tk from DIR],
        _PTOLEMY=$withval, _PTOLEMY=$PTOLEMY)
if test ! -d $_PTOLEMY; then
    AC_MSG_ERROR(Tcl directory $_PTOLEMY doesn't exist)
fi

#
# User specified location of the tcl include
#
AC_ARG_WITH(tcl, [  --with-tclinclude=DIR          use Tcl 7.6 includes from DIR],
        TCL_INCLUDE_DIR=$withval, TCL_INCLUDE_DIR=$_PTOLEMY/tcltk/itcl/include/itcl)
if test ! -d $TCL_INCLUDE_DIR; then
    AC_MSG_ERROR(Tcl directory $TCL_INCLUDE_DIR doesn't exist)
fi

AC_MSG_CHECKING([for tcl.h])
if test -f $TCL_INCLUDE_DIR/tcl.h; then 
	AC_MSG_RESULT($TCL_INCLUDE_DIR/tcl.h)
else
	AC_MSG_ERROR([Cannot find $TCL_INCLUDE_DIR/tcl.h, try --with-tclinclude=DIR])
fi

#
# User specified location of the tcl lib
#
AC_ARG_WITH(tcl, [  --with-tcllib=DIR          use Tcl 7.6 lib from DIR],
        TCL_LIB_DIR=$withval, TCL_LIB_DIR=$_PTOLEMY/tcltk/itcl.$PTARCH/lib/itcl)
if test ! -d $TCL_LIB_DIR; then
    AC_MSG_ERROR(Tcl directory $TCL_LIB_DIR doesn't exist)
fi

AC_MSG_CHECKING([for tclConfig.sh])
if test -f $TCL_LIB_DIR/tclConfig.sh; then 
	AC_MSG_RESULT($TCL_LIB_DIR/tclConfig.sh)
else
	AC_MSG_ERROR([Cannot find $TCL_LIB_DIR/tclConfig.sh, try --with-tcllib=DIR])
fi

file=$TCL_LIB_DIR/tclConfig.sh
. $file

# The variables that we use from tclConfig.sh
TCL_CC=$TCL_CC	
TCL_CFLAGS=$TCL_CFLAGS
TCL_LIB_SPEC=$TCL_LIB_SPEC
TCL_SHLIB_CFLAGS=$TCL_SHLIB_CFLAGS
TCL_SHLIB_LD=$TCL_SHLIB_LD
TCL_SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
TCL_SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
TCL_SHLIB_VERSION=$TCL_SHLIB_VERSION
# Tcl7.6 defines TCL_SRC_DIR, Tcl7.5 does not.
#TCL_SRC_DIR=$TCL_SRC_DIR
TCL_DL_LIBS=$TCL_DL_LIBS
TCL_LD_FLAGS=$TCL_LD_FLAGS
TCL_LD_SEARCH_FLAGS=$TCL_LD_SEARCH_FLAGS

#
# User specified location of the tcl srcs.  The profile code uses tclInt.h
#
# We must set this arg after sourcing tclConfig.sh, as Tcl7.6 tclConfig.sh
# sets TCL_SRC_DIR.  However, if you are using the automounter, then 
# tclConfig.sh will probably have the wrong value.
AC_ARG_WITH(tcl, [  --with-tclsrc=DIR          use Tcl srcs lib from DIR],
        TCL_SRC_DIR=$withval, TCL_SRC_DIR=$_PTOLEMY/src/tcltk/itcl2.2/tcl7.6)
#if test ! -d $TCL_SRC_DIR; then
#    AC_MSG_ERROR(Tcl directory $TCL_SRC_DIR doesn't exist)
#fi
AC_MSG_CHECKING([for tclInt.h])
if test -f $TCL_SRC_DIR/generic/tclInt.h; then 
	AC_MSG_RESULT($TCL_SRC_DIR/generic/tclInt.h)
else
	AC_MSG_RESULT([Cannot find $TCL_SRC_DIR/tclInt.h, try --with-tclsr=DIR. tclInt.h is used in the profile command. ])
fi

#
# User specified location of the tk include
#
AC_ARG_WITH(tcl, [  --with-tkinclude=DIR          use Tk 4.2 include from DIR],
        TK_INCLUDE_DIR=$withval, TK_INCLUDE_DIR=$TCL_INCLUDE_DIR)
if test ! -d $TK_INCLUDE_DIR; then
    AC_MSG_ERROR(Tk directory $TK_INCLUDE_DIR doesn't exist)
fi

AC_MSG_CHECKING([for tk.h])
if test -f $TK_INCLUDE_DIR/tk.h; then 
	AC_MSG_RESULT($TK_INCLUDE_DIR/tk.h)
else
	AC_MSG_ERROR([Cannot find $TK_INCLUDE_DIR/tk.h, try --with-tkinclude=DIR])
fi

#
# User specified location of the tk lib
#
AC_ARG_WITH(tcl, [  --with-tklib=DIR          use Tk 4.2 libs from DIR],
        TK_LIB_DIR=$withval, TK_LIB_DIR=$TCL_LIB_DIR)
if test ! -d $TK_LIB_DIR; then
    AC_MSG_ERROR(Tk directory $TK_LIB_DIR doesn't exist)
fi

AC_MSG_CHECKING([for tkConfig.sh])
if test -f $TK_LIB_DIR/tkConfig.sh; then 
	AC_MSG_RESULT($TK_LIB_DIR/tkConfig.sh)
else
	AC_MSG_ERROR([Cannot find $TK_LIB_DIR/tkConfig.sh, try --with-tklib=DIR])
fi

file=$TK_LIB_DIR/tkConfig.sh
. $file

# The variables that we use from tkConfig.sh
TK_XINCLUDES=$TK_XINCLUDES
TK_LIBS=$TK_LIBS
TK_LIB_SPEC=$TK_LIB_SPEC


#
# User specified location of the tk srcs.  The TkSteal code uses tkPort.h
#
# We must set this arg after sourcing tkConfig.sh, as Tk4.2 tkConfig.sh
# sets TK_SRC_DIR.  However, if you are using the automounter, then 
# tkConfig.sh will probably have the wrong value.
AC_ARG_WITH(tk, [  --with-tksrc=DIR          use Tk srcs lib from DIR],
        TK_SRC_DIR=$withval, TK_SRC_DIR=$TCL_SRC_DIR/../tk4.2)
#if test ! -d $TK_SRC_DIR; then
#    AC_MSG_ERROR(Tk directory $TK_SRC_DIR doesn't exist)
#fi
AC_MSG_CHECKING([for tkPort.h])
if test -f $TK_SRC_DIR/generic/tkPort.h; then 
	AC_MSG_RESULT($TK_SRC_DIR/generic/tkPort.h)
else
	AC_MSG_RESULT([Cannot find $TK_SRC_DIR/tkPort.h, try --with-tksrc=DIR. tkPort.h is used in the TkSteal xaccess command. ])
fi

#
# User specified location of the Java Development Kit (JDK)
#
AC_ARG_WITH(tcl, [  --with-java=DIR          use Java binaries from DIR],
        JAVAHOME=$withval, JAVAHOME=`cd /opt/SUNWjws/JDK; pwd`)
if test ! -d $JAVAHOME; then
    AC_MSG_ERROR(Java directory $JAVAHOME doesn't exist)
fi
if test ! -f $JAVAHOME/include/StubPreamble.h; then
    AC_MSG_ERROR(There's no StubPreamble.h in $JAVAHOME/include;  use the --with-java= configure flag to specify the location of the Java Development Kit (JDK) )
fi

AC_MSG_CHECKING([for the java compiler])
if test -f $JAVAHOME/bin/javac; then
	AC_MSG_RESULT($JAVAHOME/bin/javac)
else
	AC_MSG_ERROR([Cannot find $JAVAHOME/bin/javac, try --with-java=DIR])
fi

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl Unfortunately tcl7.6 has the wrong TCL_SHLIB_LD command in
dnl tclConfig.sh if we are running gcc.
AC_MSG_CHECKING([command to build shared libs])
if test "$TCL_CC" = "gcc"; then
	TCL_SHLIB_LD='gcc -shared'
fi
AC_MSG_RESULT($TCL_SHLIB_LD)

dnl Substitute the following variables in the Makefile (in alphabetical order)
AC_SUBST(JAVAHOME)
AC_SUBST(TCL_CC)
AC_SUBST(TCL_CFLAGS)
AC_SUBST(TCL_DL_LIBS)
AC_SUBST(TCL_INCLUDE_DIR)
AC_SUBST(TCL_LD_FLAGS)
AC_SUBST(TCL_LD_SEARCH_FLAGS)
AC_SUBST(TCL_LIB_DIR)
AC_SUBST(TCL_LIB_SPEC)
AC_SUBST(TCL_SHLIB_CFLAGS)
AC_SUBST(TCL_SHLIB_LD)
AC_SUBST(TCL_SHLIB_LD_LIBS)
AC_SUBST(TCL_SHLIB_SUFFIX)
AC_SUBST(TCL_SHLIB_VERSION)
AC_SUBST(TCL_SRC_DIR)
AC_SUBST(TK_INCLUDE_DIR)
AC_SUBST(TK_LIBS)
AC_SUBST(TK_LIB_DIR)
AC_SUBST(TK_LIB_SPEC)
AC_SUBST(TK_LIB_SPEC)
AC_SUBST(TK_SRC_DIR)
AC_SUBST(TK_XINCLUDES)


AC_OUTPUT(makefile tcl.mk:../mk/tcl.mk.in java.mk:../mk/java.mk.in \
	profile/makefile tksteal/makefile \
	tyjava/makefile tyjava/tcljava/makefile tyjava/eprintf/makefile \
	tytimer/makefile tytest/makefile tycgc/makefile)
