dnl Process this file with autoconf to produce a configure script.
AC_INIT(eprintf/eprintf.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -ltcl7:
AC_CHECK_LIB(tcl7, main)
dnl Replace `main' with a function in -ltk4:
AC_CHECK_LIB(tk4, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF

AC_OUTPUT(tcljava/Makefile makefile)
